Applet: bookeeping of applet's uiReady

When a containment adds an applet, it should put it in loadingApplets
only if the applet's ui is not ready, not its own.

This is actually a Plasma 6 porting issue and the problem is being present for all Plasma 6 releases so far.

BUG:512005


(cherry picked from commit db10a9d15ab056c8c6d82ecd69ff7614ae616d38)

c09707b4 Applet: bookeeping of applet's uiReady

Co-authored-by: Marco Martin <notmart@gmail.com>